# sixtom

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  Dockerfile.vercel  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.playwright-mcp/: page-2026-05-19T22-34-52-728Z.yml  page-2026-05-19T22-35-58-205Z.yml  page-2026-05-19T22-36-22-329Z.yml  page-2026-05-19T22-42-17-588Z.yml  page-2026-05-19T23-06-11-353Z.yml  page-2026-05-19T23-09-01-901Z.yml
docs/: first-client-playbook.md  site-copy.md
docs/superpowers/plans/: 2026-04-27-sixtom-mvp.md
docs/superpowers/specs/: 2026-04-27-sixtom-mvp-design.md
e2e/: constants.ts  notify-form.spec.ts  visual-theme.spec.ts
scripts/: capture-threesam-shots.mjs  gsc-oauth-bootstrap.mjs  optimize-shots.mjs  sync-cal.ts  test-log-nav.mjs  tsconfig.json
scripts/og-source/: build-og.mjs
src/: app.css  app.d.ts  app.html  env.d.ts  hooks.server.ts
src/lib/: copy.ts  log.ts
src/lib/wasm-particle-system/: Cargo.toml
src/lib/wasm-particle-system/src/: _lib.rs  lib.rs
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
src/schemas/: _partials.ts  author.ts  blockContent.ts  caseStudy.ts  catalog.ts  category.ts  index.ts  link.ts  page.ts  person.ts  post.ts  project.ts  quote.ts  section.ts  siteSettings.ts  song.ts
src/stories/: Page.svelte
static/: bubbles.js  enhance-form.js  global.css  llms-full.txt  llms.txt  robots.txt  sitemap.xml
(+87 files in other folders)
