[package]
name = "wasm-particle-system"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly particle system"
authors = ["Your Name"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = [
    "Window",
    "Performance",
    "console"
]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[toolchain]
channel = "stable"
components = ["rustfmt", "clippy"]